tests/neg-custom-args/erased/erased-eta.scala
object Test:

  def f(erased x: Int) =
    println("f")
    42

  val x = f // error

